@@ -1,4 +1,5 @@
 0.3.2
+Can now read output of functions ina while read loop, see example whilereadexample.
 Fixed external commands in functions.
 Fixed select using a command substitution.
 Added pipe and select example.
